@@ -1,5 +1,13 @@
 2010-05-24  Darin Adler  <darin@apple.com>
 
+        Fix build on platforms with touch code enabled.
+
+        * page/EventHandler.cpp:
+        (WebCore::pageZoomFactor): Added.
+        (WebCore::EventHandler::handleTouchEvent): Use pageZoomFactor.
+
+2010-05-24  Darin Adler  <darin@apple.com>
+
         Reviewed by Eric Seidel.
 
         Move view-related functions from Frame to FrameView
